src/test/deca/codegen/invalid/dereferencementNull.deca
class A {
    int x = 1;
}

{
    A a = null;
    int b = a.x;
}
//ERROR Error : null dereferencing.